--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "element-ui": "^2.15.3",
     "mavon-editor": "^2.9.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -43,7 +45,11 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-console":"off",
+      "import/prefer-default-export": "off",
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
