--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
       "no-console": "off",
       "import/prefer-default-export": "off",
       "no-unused-vars": "off"
+    },
+    "globals":{
+      "error": true
     }
   },
   "browserslist": [
