--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -50,7 +51,7 @@
       "import/prefer-default-export": "off",
       "no-unused-vars": "off"
     },
-    "globals":{
+    "globals": {
       "error": true
     }
   },
