--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^5.1.2",
     "element-ui": "^2.15.3",
     "mavon-editor": "^2.9.1",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
