--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "md5": "^2.3.0",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
-    "path-to-regexp": "^6.2.0"
+    "path-to-regexp": "^6.2.0",
+    "sequelize": "^6.9.0",
+    "svg-captcha": "^1.4.0"
   }
 }
