--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -x npm run server",
-    "server": "node index",
+    "server": "node --inspect index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
