--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "md5": "^2.3.0",
+    "moment": "^2.29.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "path-to-regexp": "^6.2.0",
     "sequelize": "^6.9.0",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "validate.js": "^0.13.1"
   }
 }
