--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -x npm run server",
-    "server": "node --inspect index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node --inspect index"
   },
   "repository": {
     "type": "git",
@@ -20,6 +19,7 @@
   "homepage": "https://github.com/Solitarywind/BlogBackstage_Solitarywind#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
