--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/Solitarywind/BlogBackstage_Solitarywind#readme",
   "dependencies": {
+    "-": "0.0.1",
     "axios": "^0.24.0",
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "md5": "^2.3.0",
@@ -32,6 +34,8 @@
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "path-to-regexp": "^6.2.0",
+    "qiniu": "^7.4.0",
+    "s": "^1.0.0",
     "sequelize": "^6.9.0",
     "svg-captcha": "^1.4.0",
     "validate.js": "^0.13.1"
